--- a/src/Views/Reword.axaml
+++ b/src/Views/Reword.axaml
@@ -21,7 +21,7 @@
     <v:CommitMessageTextBox Height="120" Margin="8,5,8,0" Text="{Binding Message, Mode=TwoWay}"/>
 
     <TextBlock Margin="8"
-               Text="{DynamicResource Text.Reword.Tip}"
+               Text="{DynamicResource Text.PopupEnterKeyTip}"
                TextWrapping="Wrap"
                Foreground="{DynamicResource Brush.FG2}"/>
   </StackPanel>
