--- a/src/Views/Squash.axaml
+++ b/src/Views/Squash.axaml
@@ -31,7 +31,7 @@
     <v:CommitMessageTextBox Height="120" Margin="0,4,0,0" Text="{Binding Message, Mode=TwoWay}"/>
 
     <TextBlock Margin="0,6,0,0"
-               Text="{DynamicResource Text.Reword.Tip}"
+               Text="{DynamicResource Text.PopupEnterKeyTip}"
                TextWrapping="Wrap"
                Foreground="{DynamicResource Brush.FG2}"/>
   </StackPanel>
