--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -95,7 +95,12 @@
                   <TextBlock Grid.Column="1" Classes="primary" Text="{Binding TimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
                 </Grid>
 
-                <TextBlock Grid.Row="1" Classes="primary" Text="{Binding Message}" VerticalAlignment="Bottom"/>
+                <v:StashSubjectPresenter Grid.Row="1"
+                                         Message="{Binding Message}"
+                                         Foreground="{DynamicResource Brush.FG1}"
+                                         FontSize="{Binding Source={x:Static vm:Preferences.Instance}, Path=DefaultFontSize}"
+                                         PrefixBackground="{DynamicResource Brush.InlineCode}"
+                                         VerticalAlignment="Bottom"/>
               </Grid>
             </Border>
           </DataTemplate>
