Add bare-minimum support for multi-line stash-message
With these changes, a multi-line message cannow be copied-into, viewed and copied-out-of a Stash:
* Simplify parsing in QueryStashes, by passing the `-z` argument to `git stash list` for item separation.
* Query full Message (`%B`) from stash (list-item still shows only first (Subject) line, tooltip shows full Message).
* Add "Copy Message" command in stash-item context-menu.
* Make the "Message:" text-box in StashChanges dialog support multiple lines, without changing the layout.

--- a/src/Views/StashChanges.axaml
+++ b/src/Views/StashChanges.axaml
@@ -20,6 +20,7 @@
       <TextBox Grid.Row="0" Grid.Column="1"
                Height="26"
                CornerRadius="3"
+               AcceptsReturn="True"
                Text="{Binding Message, Mode=TwoWay}"
                Watermark="{DynamicResource Text.Stash.Message.Placeholder}"
                v:AutoFocusBehaviour.IsEnabled="True"/>
