ux: use small font size for tips
Signed-off-by: leo <longshuang@msn.cn>

--- a/src/Views/StashChanges.axaml
+++ b/src/Views/StashChanges.axaml
@@ -82,6 +82,7 @@
       </CheckBox>
 
       <TextBlock Grid.Row="5" Grid.Column="1"
+                 Classes="small"
                  Margin="0,4,0,0"
                  Text="{DynamicResource Text.Stash.TipForSelectedFiles}"
                  TextWrapping="Wrap"
