--- a/src/Views/DropStash.axaml
+++ b/src/Views/DropStash.axaml
@@ -15,14 +15,16 @@
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.StashDropConfirm.Label}"/>
-      <StackPanel Grid.Column="1" Orientation="Horizontal">
-        <Path Width="12" Height="12" Margin="0,0,8,0"
+      <Grid Grid.Column="1" ColumnDefinitions="Auto,Auto,*">
+        <Path Grid.Column="0"
+              Width="12" Height="12"
+              Margin="0,0,8,0"
               HorizontalAlignment="Left" VerticalAlignment="Center"
               Data="{StaticResource Icons.Stashes}"/>
 
-        <TextBlock VerticalAlignment="Center" Classes="primary" Text="{Binding Stash.Name}" Foreground="DarkOrange"/>
-        <TextBlock VerticalAlignment="Center" Text="{Binding Stash.Message}" Margin="4,0,0,0"/>
-      </StackPanel>
+        <TextBlock Grid.Column="1" VerticalAlignment="Center" Classes="primary" Text="{Binding Stash.Name}" Foreground="DarkOrange"/>
+        <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Stash.Subject}" TextTrimming="CharacterEllipsis" Margin="4,0,0,0"/>
+      </Grid>
     </Grid>
   </StackPanel>
 </UserControl>
